--- a/BirthdayCake/BirthdayCake-master/app/src/main/res/layout/activity_main.xml
+++ b/BirthdayCake/BirthdayCake-master/app/src/main/res/layout/activity_main.xml
@@ -83,7 +83,7 @@
                 android:text="Frosting" />
 
             <Switch
-                android:id="@+id/switch2"
+                android:id="@+id/candles"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
