Added functionality to SeekBar

--- a/BirthdayCake/BirthdayCake-master/app/src/main/res/layout/activity_main.xml
+++ b/BirthdayCake/BirthdayCake-master/app/src/main/res/layout/activity_main.xml
@@ -59,7 +59,7 @@
                 android:text=" How Many Candles?" />
 
             <SeekBar
-                android:id="@+id/seekBar"
+                android:id="@+id/candleBar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.6"
